force-app/main/default/objects/Marketing_Infraction__c/Marketing_Infraction__c.object-meta.xml
<CustomObject>
    <description>Marketing Program Infractions</description>
    <label>Marketing Infraction</label>
    <nameField>
        <displayFormat>INF-{0000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing_Infractions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>