force-app/main/default/objects/Marketing_Infraction__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Marketing_Infractions</relationshipLabel>
    <relationshipName>Marketing_Infractions</relationshipName>
    <type>Lookup</type>
</CustomField>