force-app/main/default/objects/Marketing_Infraction__c/fields/Digital_Compliance_Record__c.field-meta.xml
<CustomField>
    <fullName>Digital_Compliance_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Digital Compliance Record</label>
    <referenceTo>Compliance_Audit_Request__c</referenceTo>
    <relationshipLabel>Marketing_Infractions</relationshipLabel>
    <relationshipName>Marketing_Infractions</relationshipName>
    <type>Lookup</type>
</CustomField>