force-app/main/default/objects/Marketing_Infraction__c/fields/External_Marketing_Infraction_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Marketing_Infraction_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>External Marketing Infraction ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>