force-app/main/default/objects/Marketing_Infraction__c/fields/Infraction_Date__c.field-meta.xml
<CustomField>
    <fullName>Infraction_Date__c</fullName>
    <label>Infraction Date</label>
    <type>Date</type>
</CustomField>