force-app/main/default/objects/Marketing_Infraction__c/fields/Infraction_Status__c.field-meta.xml
<CustomField>
    <fullName>Infraction_Status__c</fullName>
    <label>Infraction Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sent Requirements to Dealer</fullName>
            </value>
            <value>
                <fullName>Marketing Audit</fullName>
            </value>
            <value>
                <fullName>Partner Audit</fullName>
            </value>
            <value>
                <fullName>Sent changes to dealer</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Not Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>