force-app/main/default/objects/Marketing_Infraction__c/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <label>Partner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brinks</fullName>
            </value>
            <value>
                <fullName>EarthLink</fullName>
            </value>
            <value>
                <fullName>Frontier</fullName>
            </value>
            <value>
                <fullName>Optimum</fullName>
            </value>
            <value>
                <fullName>Spectrum</fullName>
            </value>
            <value>
                <fullName>Windstream</fullName>
            </value>
            <value>
                <fullName>Viasat</fullName>
            </value>
            <value>
                <fullName>DIRECTV</fullName>
                <isActive>false</isActive>
                <label>DIRECTV</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>