force-app/main/default/objects/Marketing_Infraction__c/fields/Social_Media_Pay_Per_Click_Websi__c.field-meta.xml
<CustomField>
    <fullName>Social_Media_Pay_Per_Click_Websi__c</fullName>
    <label>Infraction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Pay Per Click</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Face-to-Face</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>